# cherrypick-backend

./: .gitignore  README.md  docker-compose.yml  env.example  export_openapi.py  load_regulations.py  openapi.json  pyproject.toml  run_migration.py  start_ngrok.sh  test_reference_api_curl.md  test_register_api_curl.md
alembic/: env.py
alembic/versions/: 10d79db017d3_regulation_v1_for_confirm_shot_flow.py  1b4a0c1ef8d2_add_trip_needs_duration_flag.py  1f8eace3c9b4_add_llm_classifier_columns.py  20d2ec547dfe_migrate_trip_to_new_schema.py  2b4cb2d0f923_make_regulation_match_image_optional.py  430989595f06_add_bags_tables.py  7606c95b1551_merge_needs_duration_and_bags_branches.py  7c2bb0e9d2d3_add_country_and_airport_tables.py  a2f0f7c1f6d8_add_device_bootstrap_tables.py  b3c4d5e6f7g8_expand_trips_with_segments.py  cc214b25b404_create_normalized_regulation_schema.py  e25da4bf8e62_merge_country_airport_and_trip_segments_.py  f2a1d3c4e5b6_rename_us_rule_codes_to_iso.py
app/: main.py
app/api/: bags.py  bootstrap.py  climate.py  deps.py  devices.py  fx.py  items.py  media.py  reference.py  routes.py  trips.py  ws.py
app/core/: cache.py  config.py
app/db/: session.py  types.py
app/schemas/: checklist.py  climate.py  decision.py  flight.py  fx.py  preview.py  recommendation.py  reference.py  trip.py
app/services/: ai_tips.py  airlabs_airport_client.py  airport_directory.py  airport_lookup.py  app_config.py  bag_service.py  classifier_data.py  climate_service.py  device_registry.py  device_tokens.py  dict_classifier.py  (+30 more)
docs/: llm_risk_classifier_plan.md  packlist_api.md  packsafe.md  regulation_conditions_guide.md  regulation_implementation_guide.md  regulation_json_schema.md  regulation_scraping_methods.md  regulation_sources.md  scan_result_page.md
tests/: test_airport_directory.py  test_bags.py  test_device_tokens.py  test_flight_lookup.py  test_rule_engine.py
(+31 files in other folders)
