[project]
name = "cherrypick-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Doyeon",email = "doyeon71013048@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi (>=0.115,<0.116)",
    "uvicorn[standard] (>=0.30.6,<0.31.0)",
    "pydantic-settings (>=2.5.2,<3.0.0)",
    "sqlalchemy (>=2.0,<3.0)",
    "pymysql (>=1.1,<2.0)",
    "alembic (>=1.13,<2.0)",
    "boto3 (>=1.35,<2.0)",
    "python-dotenv (>=1.0,<2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=25.9.0,<26.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "ruff (>=0.14.0,<0.15.0)"
]
