[project]
name = "cherrypick-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Doyeon",email = "doyeon71013048@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi (>=0.115,<0.116)",
    "uvicorn[standard] (>=0.30.6,<0.31.0)",
    "pydantic-settings (>=2.5.2,<3.0.0)",
    "sqlalchemy (>=2.0,<3.0)",
    "pymysql (>=1.1,<2.0)",
    "alembic (>=1.13,<2.0)",
    "boto3 (>=1.35,<2.0)",
    "python-dotenv (>=1.0,<2.0)",
    "redis (>=5.0,<6.0)",
    "cryptography (>=46.0.3,<47.0.0)",
    "requests (>=2.31,<3.0)",
    "google-generativeai (>=0.8.3,<0.9.0)",
    "beautifulsoup4 (>=4.12,<5.0)",
    "lxml (>=5.0,<6.0)",
    "playwright (>=1.40,<2.0)",
    "pdfplumber (>=0.10,<1.0)",
    "airportsdata"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=25.9.0,<26.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "ruff (>=0.14.0,<0.15.0)",
    "pytest (>=8.3.3,<9.0.0)"
]

[tool.poetry]
package-mode = false
